fix website on safari

--- a/_frontend/sass/_general.scss
+++ b/_frontend/sass/_general.scss
@@ -993,7 +993,6 @@ div.wpcf7-mail-sent-ok {
     height: 290px;
     background-repeat: no-repeat;
     background-image: url(http://salivon.net/wp-content/uploads/2018/03/signup-body-reversefull.png);
-    background-image: url(http://salivon.net/wp-content/uploads/2019/05/signup-body-reversefull.webp);
     z-index: 10;
     position: relative;
     -webkit-transition: 0.3s ease-out;
@@ -1042,7 +1041,6 @@ div.wpcf7-mail-sent-ok {
     -ms-transition: 0.3s ease-out;
     transition: 0.3s ease-out;
     background-image: url(http://salivon.net/wp-content/uploads/2018/03/signup-eyeball-reverse.png);
-    background-image: url(http://salivon.net/wp-content/uploads/2019/05/signup-eyeball-reverse.webp);
     width: 30px;
     height: 36px;
     background-repeat: no-repeat;
@@ -1050,7 +1048,6 @@ div.wpcf7-mail-sent-ok {
 
 .bird-signup .bird-arm {
     background-image: url(http://salivon.net/wp-content/uploads/2018/03/signup-arm-reverse.png);
-    background-image: url(http://salivon.net/wp-content/uploads/2019/05/signup-arm-reverse.webp);
     width: 115px;
     height: 149px;
     position: absolute;
